# the-audiable-landscape

./: .gitignore
ableton/session Project/: session.als
embedded-midi/: CMakeLists.txt  button_midi.c  usb_descriptors.c
max/: input_test.maxpat
osc-bridge/: main.py  test.py
topography/dots/: dots.pde  scan.pde
